--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=currentWeather
+logging.level.org.springframework=error
+api.baseUrl="http://api.openweathermap.org/data/2.5/weather?"
+api.key=
