add local properties file and use it in the client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 spring.application.name=currentWeather
 logging.level.org.springframework=error
-api.baseUrl="http://api.openweathermap.org/data/2.5/weather?"
-api.key=
+spring.profiles.active=local
